--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,27 @@ body {
   margin: 0;
   background-color: black;
 }
-.grid-container {
-  max-width: 1000px;
-  max-height: 500px;
-  margin: 0;
+input {
+  z-index: -1;
+  height: 150px;
+  width: 150px;
+  background-color: white;
+}
+h1 {
+  color: white;
+  text-align: center;
+}
+.container {
+  max-width: 750px;
+  max-height: 700px;
+  margin: 150px auto;
+  text-align: center;
 }
 .grid {
-  height: 300px;
-  width: 300px;
+  height: 150px;
+  width: 150px;
   background-color: white;
-  margin: 10px;
+  margin: 20px;
   display: inline-block;
+  font-size: 1000%;
 }
